Fix 404 button size on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -63,13 +63,16 @@ ul {
     background-color: #FB5510;
     color: #FFFFFF;
     position: absolute;
-    top: 48%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 1.2rem;
     text-transform: uppercase;
     border-radius: 10rem;
-    transition: all .3s; }
+    transition: background .3s; }
+    @media (max-width: 400px) {
+      .wrapper .back-btn:link, .wrapper .back-btn:visited {
+        font-size: .9rem; } }
     @media (min-width: 768px) {
       .wrapper .back-btn:link, .wrapper .back-btn:visited {
         font-size: 1.6rem;
