--- a/sass/404.scss
+++ b/sass/404.scss
@@ -15,13 +15,17 @@ $color-button: #FB5510;
             background-color: $color-button;
             color: $primary-color-text;
             position: absolute;
-            top: 48%;
+            top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
             font-size: 1.2rem;
             text-transform: uppercase;
             border-radius: 10rem;
-            transition: all .3s;
+            transition: background .3s;
+
+            @media (max-width: 400px) {
+                font-size: .9rem;
+            }
 
             @media (min-width: 768px) {
                 font-size: 1.6rem;
